@@ -15,7 +15,9 @@ extern const struct optdesc opt_escape;
 extern const struct optdesc opt_forever;
 extern const struct optdesc opt_intervall;
 extern const struct optdesc opt_retry;
+extern const struct optdesc opt_chdir;
 extern const struct optdesc opt_umask;
-extern const struct optdesc opt_un_umask;
+
+extern int xio_chdir(struct opt* opts, char **orig_dir);
 
 #endif /* !defined(__xiolayer_h_included) */
